Fixed mobile issue on iphone safari

--- a/sass/app/css/free/car/modules/single/_sidebar.scss
+++ b/sass/app/css/free/car/modules/single/_sidebar.scss
@@ -161,7 +161,6 @@
                                     display: inline-flex;
                                     gap: 10px;
                                     height: 32px;
-                                    margin-top: 5px;
                                     .acr-dec,
                                     .acr-inc{
                                         color: $color-brand-dark;
@@ -180,6 +179,7 @@
                                         border: 0px solid;
                                         padding: 0;
                                         text-align: center;
+                                        margin: 0;
                                         min-height: auto;
                                         &:focus{
                                             box-shadow: none;
